add doc on how to build function images with Buildpacks
Signed-off-by: laminar <tpiperatgod@gmail.com>